--- a/style.css
+++ b/style.css
@@ -3,3 +3,47 @@ body{
     font-family: 'Roboto Slab', serif;
     margin: 0%;  
 }
+h1{
+    font-size: 44px;
+}
+h2{
+    font-size: 39px;
+}
+h4{
+    font-size: 29px;
+}
+.stay-home{
+    display: flex;
+    margin-bottom: 250px;
+    padding: 50px;
+}
+
+.mission-on{
+    width: 50%;
+    padding-left: 5%;
+    
+}
+ 
+.mission-on img{
+    width: 50%;
+    
+}
+.border-left{
+    border-left: 5px solid black;
+    border-radius: 4px rgb(18, 171, 209);
+    border-image: linear-gradient(rgb(36, 2, 2),rgb(219, 68, 57));
+     border-image-slice: 1;
+     padding: 0%;
+     margin-left: 4px;
+}
+.border-left h2{
+    color: rgb(150, 223, 78);
+}
+.link-btn{
+    text-decoration: none;
+    background-image: linear-gradient(rgb(29, 192, 233),rgb(248, 252, 52));
+    padding: 10px 40px;
+    color: rgb(61, 56, 56);
+    font-weight: 500;
+    border-radius: 5px;
+}
